--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     const buttons = [
       {
         text: "codeBgone",
-        link: "https://example.com/aaaaaaa",
+        link: "https://hecker7734.github.io/scratch-tools/sites/codeBgone.html",
         tooltip: "Want your scratch projects code to be gone! No Not really? at least make it invisible right? people cannot steal what they cannot see.",
       },
       {
