--- a/sites/codeBgone.html
+++ b/sites/codeBgone.html
@@ -49,7 +49,7 @@
     </script>
 </head>
 <body>
-    <h2 class="toolstitle">Scratch Tools - Homepage</h2><br>
+    <h2 class="toolstitle" href="https://hecker7734.github.io/scratch-tools/">Scratch Tools - Homepage</h2><br>
     <h1>Sb3, Code Be Gone!</h1><hr>
     <p>Warning:<p> <ol>
         <li>This could go against scratch's rules.</li>
